# SoftDev

dev1/: makefile  makefile0  strange_app
dev2/: gdb.py  public  public64
dev3/: lame_project.tgz  script.sh
dev3/project/: configure.ac
dev3/project/src/lib_foo/: makefile.am
dev3/project/src/main/: makefile.am
python1/: run.sh  solution1.py
python2/: SECRET  solution2 (copy 1).py  solution2.py
python3/: solution3 (copy 1).py  solution3 (copy 2).py  solution3.py
shell1/: s1.sh
shell2/: prova.txt  solution.sh
shell3/: buildfolders.sh  restore.sh  solution  solution (copy 1)  solutionOLD  solutionOLD2  solutionOLD3  solutionOLD4  vuota.tgz
shell3/dirA/: dirE.tgz
shell3/dirB/: dirF.tgz
